FE #feat: 설명글 주석 추가

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -29,6 +29,7 @@
 <body>
   <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
   <div id="root"></div>
+  <!-- 카카오맵 API를 사용하기 위한 앱 Key 설정 -->
   <script type="text/javascript"
     src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ac65606c7bfddffc772c03251dda6161&libraries=services"></script>
   <!--
