FE #feat: 지도 추가

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,13 +26,16 @@
   <!-- <script type="text/javascript" src="%REACT_APP_KAKAO_MAP%"></script> -->
   <title>Bravo Silber Life</title>
   <!-- 카카오맵 API를 사용하기 위한 앱 Key 설정 -->
-  <script type="text/javascript"
-    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ac65606c7bfddffc772c03251dda6161&libraries=services"></script>
+  <!-- <script type="text/javascript"
+    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ac65606c7bfddffc772c03251dda6161&libraries=services"></script> -->
 </head>
 
 <body>
   <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
   <div id="root"></div>
+  <script type="text/javascript"
+    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ac65606c7bfddffc772c03251dda6161&libraries=services"></script>
+
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
